tests/toylang/neg/001308_mutation.toylang
program a = { var do : bool; } .
